5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1785_1602.log
== TEST (2019-05-30 11:05:19) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp)):
	i = i + 1
print(vtemp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:13) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
print(max(vtemp))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:08:26) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
print(max(vtemp))
-- EXECUTION TIME:
0.422103
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
40.2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
44.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:03) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp)):
	i = i + 1
	
print(max(vtemp))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:09:18) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp)):
	i = i + 1
	
print(max(vtemp))

-- EXECUTION TIME:
0.362339
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
40.2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
44.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:24) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp)):
	i = i + 1
	
	print(max(vtemp))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:26) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp)):
	i = i + 1
	
	print(max(vtemp))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:09:26) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp)):
	i = i + 1
	
	print(max(vtemp))

-- EXECUTION TIME:
0.607065
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
40.2
40.2
40.2
40.2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
44.0
44.0
44.0
44.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
23
23
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:02) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp))
	i = i + 1
print(max(vtem[i]))

-- ERROR:
File "XXXX", line 4
    while(i < size(vtemp))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:19) 
-- CODE:
from numpy import*
vtemp = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vtemp))
	i = i + 1
print(max(vtemp[i]))

-- ERROR:
File "XXXX", line 4
    while(i < size(vtemp))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:43) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vet))
	i = i + 1
print(max(vet[i]))

-- ERROR:
File "XXXX", line 4
    while(i < size(vet))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:48) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vet))
	i = i + 1


-- ERROR:
File "XXXX", line 4
    while(i < size(vet))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:02) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vet)):
	i = i + 1
print(max(vet[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:07) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))
i = 0
while(i < size(vet)):
	i = i + 1
	print(max(vet[i]))
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:05) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))

c = max(vet)
b = size(vet)
t = 0
while(t < c):
	t = t + 1
	print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:16) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))

c = max(vet)
b = size(vet)
t = 0
while(t < c):
	t = t + 1
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:57) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))

c = max(vet)
b = size(vet)
t = 0
while(t < c):
	t = t + 1
print(max(vet[i])
	
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:21:00) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))

c = max(vet)
b = size(vet)
t = 0
while(t < c):
	t = t + 1
print(max(vet[i])
	
	
-- EXECUTION TIME:
0.13946
-- ERROR:
  File "/home/codebench/codes/1785/1602/main.py", line 12
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:21:07) 
-- CODE:
from numpy import*
vet = array(eval(input("tempo de chegada: ")))

c = max(vet)
b = size(vet)
t = 0
while(t < c):
	t = t + 1
	print(max(vet[i])
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:11) 
-- CODE:
from numpy import*
a = array(eval(input("tempo de chegada: ")))

b = max(vet)
c = size(vet)
t = 0
while(t < c):
	if( a[t] == b):
		i = t
		t = c
	t += 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:42) 
-- CODE:
from numpy import*
a = array(eval(input("tempo de chegada: ")))

b = max(a)
c = size(a)
t = 0
while(t < c):
	if( a[t] == b):
		i = t
		t = c
	t += 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:51) 
-- CODE:
from numpy import*
a = array(eval(input("tempo de chegada: ")))

b = max(a)
c = size(a)
t = 0
while(t < c):
	if( a[t] == b):
		i = t
		t = c
	t += 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:31:56) 
-- CODE:
from numpy import*
a = array(eval(input("tempo de chegada: ")))

b = max(a)
c = size(a)
t = 0
while(t < c):
	if( a[t] == b):
		i = t
		t = c
	t += 1
print(i)
-- EXECUTION TIME:
0.348437
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:12) 
-- CODE:
from numpy import*
x = array(eval(input("tempo de chegada: ")))

y = max(a)
z = size(a)
t = 0
while(t < z):
	if( x[t] == y):
		i = t
		t = z
	t += 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:33:13) 
-- CODE:
from numpy import*
x = array(eval(input("tempo de chegada: ")))

y = max(a)
z = size(a)
t = 0
while(t < z):
	if( x[t] == y):
		i = t
		t = z
	t += 1
print(i)
-- EXECUTION TIME:
0.485033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1785/1602/main.py", line 4, in <module>
    y = max(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:15) 
-- CODE:
from numpy import*
x = array(eval(input("tempo de chegada: ")))

y = max(a)
z = size(a)
t = 0
while(t < z):
	if( x[t] == y):
		i = t
		t = z
	t += 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:33:17) 
-- CODE:
from numpy import*
x = array(eval(input("tempo de chegada: ")))

y = max(a)
z = size(a)
t = 0
while(t < z):
	if( x[t] == y):
		i = t
		t = z
	t += 1
print(i)
-- EXECUTION TIME:
0.336842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1785/1602/main.py", line 4, in <module>
    y = max(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:26) 
-- CODE:
from numpy import*
a = array(eval(input("tempo de chegada: ")))

b = max(a)
c = size(a)
t = 0
while(t < c):
	if( a[t] == b):
		i = t
		t = c
	t += 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:33:28) 
-- CODE:
from numpy import*
a = array(eval(input("tempo de chegada: ")))

b = max(a)
c = size(a)
t = 0
while(t < c):
	if( a[t] == b):
		i = t
		t = c
	t += 1
print(i)
-- EXECUTION TIME:
0.348392
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
